// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`itemsContainer correct component rendered on hasError 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ItemsContainer>
    <div
      style={
        Object {
          "fontSize": "30px",
        }
      }
    >
      <h1>
        Something went wrong with the backend
      </h1>
    </div>
  </ItemsContainer>
</Provider>
`;

exports[`itemsContainer correct component rendered on instanciation 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ItemsContainer>
    <div
      className="ListContainer"
    >
      <h3>
        Loading...
      </h3>
    </div>
  </ItemsContainer>
</Provider>
`;
